Add JWT authentication and user management features with necessary configurations and dependencies